--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,71 +1,107 @@
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  line-height: 1;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1;
+    background-color: #d2fdff;
 }
 
-textarea{
-  background: transparent;
-  border: none;
-  resize: none;
-  color: #000000;
-  border-left: 1px solid black;
-  padding: 10px;
+textarea {
+    background: transparent;
+    border: none;
+    resize: none;
+    color: #303c6c;
+    border-left: 1px solid black;
+    padding: 10px;
 }
 
 .jumbotron {
-  text-align: center;
-  background-color: transparent;
-  color: black;
-  border-radius: 0;
-  border-bottom: 10px solid black;
+    text-align: center;
+    background-color: #d2fdff;
+    color: #303c6c;
+    border-radius: 0;
+    border-bottom: 10px solid black;
 }
 
-.description{
-  white-space: pre-wrap;
+
+/* Unsure when this class will be used  */
+
+.description {
+    white-space: pre-wrap;
 }
 
-.time-block{
-  text-align: center;
-  border-radius: 15px;
+.time-block {
+    text-align: center;
+    border-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .row {
-  white-space: pre-wrap;
-  height: 80px;
-  border-top: 1px solid white;;
+    white-space: pre-wrap;
+    height: 80px;
+    border-top: 1px solid white;
+    ;
 }
 
 .hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
+    background-color: #b4dfe5;
+    color: #303c6c;
+    border-top: 1px black;
+    border-bottom: 1px black;
+    border-left: 1px solid black;
+    padding-top: 30px;
 }
 
+
+/* update these to the colors that I would like them to be  */
+
 .past {
-  background-color: #d3d3d3;
-  color: white;
+    background-color: #FBE8A6;
+    ;
+    color: #303c6c;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+    background-color: #F4976C;
+    color: #303c6c;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+    background-color: #fbecb7;
+    color: #303c6c;
 }
 
 .saveBtn {
-  border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06AED5;
-  color: white;
+    border-left: 1px solid black;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: #b4dfe5;
+    color: #303c6c;
 }
 
 .saveBtn i:hover {
-  font-size: 20px;
-  transition: all .3s ease-in-out;
+    font-size: 20px;
+    transition: all .3s ease-in-out;
+}
+
+.clearBtn {
+    float: center;
+    border-radius: 10px;
+    background-color: #303c6c;
+    color: white;
+    opacity: 1;
+    font-size: 30px;
+    padding: 5px;
+    margin: auto;
+    display: block;
+}
+
+.clearBtn:Hover {
+    font-size: 30px;
+    opacity: 0.6;
+    transition: all .3s ease-in-out;
+}
+
+.far {
+    font-size: 200%;
 }
